[build-system]
requires = ["setuptools", "wheel"]

[project]
authors = [{ email = "ra@tcp.direct" }, { name = "ra" }]
classifiers = ["Development Status :: 0.4.1 Dev"]
dependencies = [
    "attrs>=21.4.0",
    "aiohttp>=3.8.1",
    "loguru>=0.6.0",
    "asyncpg>=0.25.0",
    "asyncpg>=0.25.0",
    "pycryptodomex>=3.14.1"
]
description = "MaPy MapleStory Emulator"
keywords = ["MapleStory", "Server Emulator"]
maintainers = [{ name = "ra", email = "ra@tcp.direct" }]
name = "MaPy"
readme = "README.md"
requires-python = "^3.10.2"
version = "0.4.1"

[project.optional-dependencies]
linux = ["uvloop>=0.16.0"]

[tool.flake8]
extend-ignore = "E203"
max-line-length = 88

[tool.black]
include = "\\.pyi?$"
target-version = [ "py310" ]

[tool.poetry]
name = "MaPy"
version = "0.4.1"
description = "MaPy MapleStory Emulator"

license = "MIT"

authors = ["ra <ra@tcp.direct>"]

readme = "README.md"

repository = "https://github.com/Rooba/mapy"
homepage = "https://github.com/Rooba/mapy"

keywords = ["MapleStory", "Server Emulator"]


[tool.poetry.dependencies]
python = "^3.10"  # Compatible python versions must be declared here
toml = "^0.10.2"
# Dependencies with extras
requests = { version = "^2.13", extras = [ "security" ] }
# Python specific dependencies with prereleases allowed
pathlib2 = { version = "^2.2", python = "~2.7", allow-prereleases = true }
# Git dependencies
cleo = { version = "~0.8.1" }

# Optional dependencies (extras)
pendulum = { version = "^1.4", optional = true }
attrs = ">=21.4.0"
aiohttp = "<3.8.0"
cryptography = ">=36.0.2"
yarl = ">=1.7.0"
PyYAML = ">=6.0"
loguru = ">=0.6.0"
asyncpg = ">=0.25.0"
pycryptodomex = "^3.14.1"

[tool.poetry.scripts]
mapy = "run:__init__"